tests/good/syntax/024-left.clap
val x : { Left + Right } = Left at { Left + Right }

